updated image card

--- a/about/about.html
+++ b/about/about.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="/style.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
 
     <script src="/event/index.js" defer></script>
@@ -86,33 +89,41 @@
       </div>
       <hr />
 
-      <h1 class="phrase-schedule">
+      <h2 class="phrase-schedule">
         Cada tipo de desfile desempenha um papel importante na indústria da
         moda, moldando a forma como vemos a moda e transmitindo mensagens
         significativas.
-      </h1>
+      </h2>
+      <h2 class="name-stylist">ESTILISTA ISADORA VIEIRA</h2>
 
-      <div class="stylists-story">
-        <div class="img-stylist">
-          <img src="/assets/img/img-stylist.png" alt="Imagem da estilista" />
+      <div class="container-stylists">
+        <div class="back-text-stylist">
+          <p class="info-stylist">
+            Continua a surpreender o mundo da moda com suas criações inovadoras
+            e é uma figura icônica na indústria que influencia e inspira novos
+            talentos em todo o mundo. Sua dedicação à moda e ao seu compromisso
+            com a responsabilidade ambiental fazem dela uma estilista
+            verdadeiramente notável.
+          </p>
         </div>
-        <div class="name-text-stylist">
-          <h2 class="name-stylist">
-            ESTILISTA ISADORA VIEIRA
-          </h2>
-            <p class="text-stylist">
-              ISADORA VIEIRA continua a surpreender o mundo da moda com suas
-              criações inovadoras e é uma figura icônica na indústria que
-              influencia e inspira novos talentos em todo o mundo. Sua dedicação à
-              moda e ao seu compromisso com a responsabilidade ambiental fazem
-              dela uma estilista verdadeiramente notável.
-            </p>
+        <div class="flip-image">
+          <div class="front-img-stylist">
+           
+            <i class="arrow fa-solid fa-angle-left arrow" ></i>
+              <img
+              class="img-stylist"
+              src="/assets/img/img-stylist.png"
+              alt="Imagem da estilista"
+            />
+        
+          </div>
         </div>
       </div>
+
       <hr />
     </main>
     <footer>
-      <p>Todos direitos reservados ₢ Ellen Santos 2023</p>
+      <p>Todos direitos reservados © Ellen Santos 2024</p>
     </footer>
   </body>
 </html>
