--- a/home/home.html
+++ b/home/home.html
@@ -45,7 +45,8 @@
         <div class="back-image">
           <p>Fashion Closet Dia 1</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Fugit voluptates laboriosam officia?.</p>
+            Fugit voluptates laboriosam officia!.</p>
+        </div>
         </div>
       </section>
 
@@ -64,8 +65,9 @@
       <div class="back-image">
         <p>Fashion Closet Dia 2</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-          Fugit voluptates laboriosam officia?.</p>
-      
+          Fugit voluptates laboriosam officia!.</p>
+        </div>
+      </div>
       </section>
 
 
@@ -83,7 +85,7 @@
       <div class="back-image">
         <p>Fashion Closet Dia 3</p>
        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-          Fugit voluptates laboriosam officia?.</p>
+          Fugit voluptates laboriosam officia!.</p>
       </div>
     </div>    
   </section>
