updated alert message

--- a/parade_form/parade_form.html
+++ b/parade_form/parade_form.html
@@ -159,10 +159,11 @@
             <button class="button-form" type="button">
               Confirmar Presença
             </button>
+
           </div>
         </form>
-      </div>
-      <div id="success-messages-container"></div>
+      </div id="success-messages-container"></div>
+      <div  id="error-messages-container"></div>
     </main>
     <hr />
     <footer>
