update card name

--- a/home/home.html
+++ b/home/home.html
@@ -33,7 +33,7 @@
     <section class="day"> 
 
       <section class="container-flip">
-        <h3>Desfile Conceitua</h3>
+        <h3>Desfile Conceitual</h3>
         <div class="flip-image"> 
         <div  class="front-image">
           <img
