--- a/parade_form/parade_form.html
+++ b/parade_form/parade_form.html
@@ -12,42 +12,96 @@
 
     <title>Formulário do desfile</title>
   </head>
-  <body>
+  <body >
     <header>
-      <nav class="title-nav">
-        <h2 class="title-logotipo">FC 2024</h2>
+      <h1 class="title">Formulário</h1>
+
+      <nav class="name-nav">
+        <a
+          class="name-logotipo-2"
+          href="/home/home.html"
+          >FC 2024</a
+        >
         <ul class="nav" style="list-style: none">
           <li>
-            <a href="/home/home.html" onclick="changeActive(event)">Home</a>
-            <a
-              href="/parade_schedule/parade_schedule.html"
-              onclick="changeActive(event)"
-              >Programação</a
-            >
-            <a href="/about/about.html" onclick="changeActive(event)">Sobre</a>
-            <a href="/local/local.html" onclick="changeActive(event)">Local</a>
-            <a
-              href="/parade_form/parade_form.html"
-              onclick="changeActive(event)"
-              >Formulário</a
-            >
+            <div class="dropdown">
+              <a href="/home/home.html" onclick="changeActive(event)">Home</a>
+              <div class="dropdown-content">
+                <a href="/home/home.html#shudeles">Desfiles</a>
+                <a href="/home/home.html#objective-shudeles">Objetivo </a>
+                <a href="/home/home.html#location">Localização</a>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <a
+                href="/parade_schedule/parade_schedule.html"
+                onclick="changeActive(event)"
+                >Programação</a
+              >
+              <div class="dropdown-content">
+                <a href="/parade_schedule/parade_schedule.html#day-1">Dia 1</a>
+                <a href="/parade_schedule/parade_schedule.html#day-2">Dia 2</a>
+                <a href="/parade_schedule/parade_schedule.html#day-3">Dia 3</a>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <a href="/about/about.html" onclick="changeActive(event)"
+                >Sobre</a
+              >
+              <div class="dropdown-content">
+                <a href="/about/about.html#conceptual-parade"
+                  >Desfile Conceitual</a
+                >
+                <a href="/about/about.html#commercial-parade"
+                  >Desfile Comercial</a
+                >
+                <a href="/about/about.html#sustainability-parade"
+                  >Desfile Sustentabilidade</a
+                >
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <a href="/local/local.html" onclick="changeActive(event)"
+                >Local</a
+              >
+              <div class="dropdown-content">
+                <a href="/local/local.html#history">Histórico Copan</a>
+                <a href="/local/local.html#event-location">Como Chegar</a>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <a
+                href="/parade_form/parade_form.html"
+                onclick="changeActive(event)"
+                >Formulário</a
+              >
+              <div class="dropdown-content">
+                <a href="/parade_form/parade_form.html#ticket">Ingresso</a>
+              </div>
+            </div>
           </li>
         </ul>
       </nav>
-      <h1 class="title">Formulário</h1>
+  
+      <!-- <div class="gradient-image"></div> -->
+
     </header>
     <main>
-      <h1 class="form-phrase">
+      <div class="container-form"> 
+      <h1 id="ticket" class="form-phrase">
         Antecipa a compra do seu Ingresso preencha o Formulário
       </h1>
       <hr />
       <div class="form">
-        <div class="img-form">
-          <h3>Confirme sua presença</h3>
-          <img src="/assets/img/img-model_form.jpg" alt="Imagem modelo" />
+        <div class="confirm-presence">
+          <h2>Confirme sua presença</h2>
           <p>* Indica uma pregunta obrigatoria</p>
         </div>
-      </div>
+      </div> 
 
       <div class="questions">
         <form>
@@ -161,9 +215,11 @@
             </button>
 
           </div>
+        </div>
         </form>
       </div id="success-messages-container"></div>
       <div  id="error-messages-container"></div>
+    </div>
     </main>
     <hr />
     <footer>
